...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchExhibitActivity">

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:gravity="center"
        android:text="Clear"
        android:textSize="14dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@id/clear_btn"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exhibit_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toTopOf="@+id/selected_exhibits_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/selected_exhibits_btn"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/plan_btn"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
...
